// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> component should show loader 1`] = `
<Fragment>
  <h1>
    Star wars vehicle
  </h1>
  <withHandlers(SearchForm) />
  <div>
    Brak pojazdu o podanym Id
  </div>
</Fragment>
`;

exports[`<App/> component should show vehicle if it exists 1`] = `
<Fragment>
  <h1>
    Star wars vehicle
  </h1>
  <withHandlers(SearchForm) />
  <Vehicle
    vehicle={
      Object {
        "model": "Vehicle model",
        "name": "Vehicle name",
      }
    }
  />
</Fragment>
`;
